Added pagination to User